# protobuf-lsp

./: CHANGELOG.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md
.github/workflows/: publish.yml  release.yml  rust.yml
examples/: test_complex_options.rs
src/: lib.rs  main.rs  server.rs
src/features/: code_actions.rs  completion.rs  definition.rs  diagnostics.rs  document_link.rs  folding.rs  formatting.rs  hover.rs  mod.rs  references.rs  rename.rs  semantic_tokens.rs  signature_help.rs  symbols.rs  workspace_symbols.rs
src/parser/: mod.rs  proto.rs  resolver.rs
src/workspace/: manager.rs  mod.rs
tests/line_number_fix/: README.md  run_test.sh  test_line_numbers.rs
tests/line_number_fix/simple_case/: README.md  test.proto
tests/line_number_fix/teams_proto_case/: README.md
