[package]
name = "protobuf-lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1.40", features = ["full"] }
protobuf-parse = "3.6"
protobuf = "3.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "6.0"
anyhow = "1.0"
parking_lot = "0.12"
tempfile = "3.13"
regex = "1.11"

[[example]]
name = "test_goto_definition"
path = "examples/test_goto_definition.rs"

[dev-dependencies]
