[package]
name = "protobuf-lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1.40", features = ["full"] }
proto-parser = { git = "https://github.com/lasorda/proto-rs.git", branch = "master" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "6.0"
anyhow = "1.0"
parking_lot = "0.12"

[[example]]
name = "test_complex_options"
path = "examples/test_complex_options.rs"

[dev-dependencies]
tempfile = "3.13"
